compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__same_imports_multiple_times_7.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1976
expression: "\n        import one.{\n          fn1\n        } as x\n        import two.{\n          fn2\n        } as x\n        "
snapshot_kind: text
---
----- SOURCE CODE
-- one.gleam

            pub fn fn1() { 1 }
            

-- two.gleam

            pub fn fn2() { 1 }
            

-- main.gleam

        import one.{
          fn1
        } as x
        import two.{
          fn2
        } as x
        

----- ERROR
error: Duplicate import
  ┌─ /src/one/two.gleam:5:9
  │    
2 │   ╭         import one.{
3 │   │           fn1
4 │   │         } as x
  │   ╰──────────────' First imported here
5 │ ╭           import two.{
6 │ │             fn2
7 │ │           } as x
  │ ╰────────────────^ Reimported here

`x` has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
