compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__suggest_unwrapping_a_result_when_types_match.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2413
expression: "\npub fn main() {\n  let value = Ok(1)\n  add_1(value)\n}\n\nfn add_1(to x) { x + 1 }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let value = Ok(1)
  add_1(value)
}

fn add_1(to x) { x + 1 }


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:9
  │
4 │   add_1(value)
  │         ^^^^^

Expected type:

    Int

Found type:

    Result(Int, a)
