compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__suggest_wrapping_a_function_return_value_in_error.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2822
expression: "\npub fn main() -> Result(Int, Bool) {\n  True\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() -> Result(Int, Bool) {
  True
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:3
  │
3 │   True
  │   ^^^^ Did you mean to wrap this in an `Error`?

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Result(Int, Bool)

Found type:

    Bool
