compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__suggest_wrapping_a_use_returned_value_in_ok.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2833
expression: "\npub fn main() -> Result(Int, Bool) {\n  use <- want_result\n  1\n}\n\npub fn want_result(wibble: fn() -> Result(Int, Bool)) {\n  todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() -> Result(Int, Bool) {
  use <- want_result
  1
}

pub fn want_result(wibble: fn() -> Result(Int, Bool)) {
  todo
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:3
  │
4 │   1
  │   ^ Did you mean to wrap this in an `Ok`?

Expected type:

    Result(Int, Bool)

Found type:

    Int
