compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__suggest_wrapping_a_value_into_ok_if_types_match_with_multiline_result_in_block.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2764
expression: "\npub fn main() {\n  case todo {\n    1 -> Ok(2)\n    _ -> {\n      todo\n      1\n      |> add_1\n    }\n  }\n}\n\nfn add_1(n: Int) { n + 1 }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case todo {
    1 -> Ok(2)
    _ -> {
      todo
      1
      |> add_1
    }
  }
}

fn add_1(n: Int) { n + 1 }


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:5
  │  
5 │ ╭     _ -> {
6 │ │       todo
7 │ │       1
8 │ │       |> add_1
9 │ │     }
  │ ╰─────^

This case clause was found to return a different type than the previous
one, but all case clauses must return the same type.

Expected type:

    Result(Int, a)

Found type:

    Int
