compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__type_used_as_a_constructor_1.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3333
expression: "pub fn main() -> Int() {}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() -> Int() {}

----- ERROR
error: Type used as a type constructor
  ┌─ /src/one/two.gleam:1:21
  │
1 │ pub fn main() -> Int() {}
  │                     ^^ You can remove this

`Int` is a type with no parameters, but here it's being used as a type
constructor.
